split main into multiple files

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,7 +1,7 @@
 DIRECTORIES = $(wildcard */)
 
 all:
-	make -C $(DIRECTORIES) all
+	for f in $(DIRECTORIES) ; do make -C $$f all ; done
 
 .PHONY: all
 .DEFAULT_GOAL := all
