--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-breathe==4.35.0
-Sphinx==6.1.3
-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-sphinx-rtd-theme==1.2.0
+breathe~=4.35.0
+Sphinx~=6.1.3
+sphinxcontrib-applehelp~=1.0.4
+sphinxcontrib-devhelp~=1.0.2
+sphinxcontrib-htmlhelp~=2.0.1
+sphinxcontrib-jsmath~=1.0.1
+sphinxcontrib-qthelp~=1.0.3
+sphinxcontrib-serializinghtml~=1.1.5
+sphinxcontrib-bitfield~=0.4.2
+sphinx-rtd-theme~=1.2.0
